--- a/index.html
+++ b/index.html
@@ -93,7 +93,17 @@
   <footer>
   <div class="info">
     <span class="title">MY TIMES</span>
-  </div></footer>
+    <nav>
+      <span><a href="#">World</a></span>
+      <span><a href="#">U.S.</a></span>
+      <span><a href="#">Tech</a></span>
+      <span><a href="#">Science</a></span>
+    </nav>
+  </div>
+  <div class="copyright">
+      © 2016, My Times (A Division of Codecademy bite)
+  </div>
+</footer>
 
 </body>
 
